feat: add teacher announcement approval workflow